baml_language/crates/baml_tests/snapshots/compiles/top_level_header_comment/baml_tests__compiles__top_level_header_comment__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 34598
---
=== PPIR ===
function user.Foo() -> int  [expr] {
  {  } 1
}
