baml_language/crates/baml_tests/snapshots/compiles/top_level_header_comment/baml_tests__compiles__top_level_header_comment__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 22577
---
=== COMPILER2 DIAGNOSTICS ===
No errors found.
